layout fixes for playlists on Safari + user settings popup positioning

--- a/src/applications/content-playlists-app/playlist/playlist.component.scss
+++ b/src/applications/content-playlists-app/playlist/playlist.component.scss
@@ -12,3 +12,6 @@
 	box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.2);
 	width: 100% !important;
 }
+.kSections{
+	height: 100%;
+}
