--- a/src/shared/content-shared/entries/entries-selector/entries-selector.component.scss
+++ b/src/shared/content-shared/entries/entries-selector/entries-selector.component.scss
@@ -66,7 +66,7 @@
   }
 
   .kEntriesTableFooter {
-    width: 996px;
+    width: 994px;
   }
 
   .kEntriesSelectorBucketOpened .kEntriesTableFooter {
